--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,6 @@
     "connectionTimeout": 60,
     "port": 8002,
     "natsUrl": "nats://127.0.0.1:4222",
-    "natsSubject": "notifications",
+    "natsSubject": "telegramCommandMessages",
     "shikimoriSheduleUrl": "https://shikimori.one/api/calendar"
 }
